# data-immo-python

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
databases/: init.sql  remove_duplicates.sql
dbt_immo/: dbt_project.yml
dbt_immo/models/: classes.sql  mutations.sql
src/: dremio.py  dvf_extract.py  extract_api_dvf.py  extract_duckdb.py  geometry.py  load.py  load_dbt.py  main.py  seloger.py  tables.py  tasks.py  transform_api_dvf.py  transform_duckdb.py  utils.py
src/extract/: api_dvf.py
